# Easy-Opcua-Certificate-Creator

./: .gitignore  README.md  pyproject.toml
memory-bank/: last_task.md
src/: opcua_certificate_tui.py
src/opcua_cert/: __main__.py  opcua_certificate_tui.py
