[project]
name = "opcua-cert"
version = "0.1.2"
description = "This is a automated certificate generation tool for OPC UA applications."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "GreasePanda"}]
license = "MIT"
dependencies = [
    "cryptography>=46.0.1",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
opcua-cert = "__main__.py:main"

[build-system]
requires = ["uv_build >= 0.9.2, <0.10.0"]
build-backend = "uv_build"